# eodh-ac-api

./: .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  conda-lock-dev.yml  conda-lock.yml  env-dev.yaml  env.yaml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yaml  pr-pipeline.yaml  zizmor-sec-check.yaml
action-creator-requests/: ac-api.http
ades-requests/: ades.http  http-client.env.json
docs/: index.md
docs/guides/: setup-dev-env.md
http-clients/action-creator/: ac-api-v1.0.http  ac-api-v1.1.1.http  ac-api-v1.1.http  ac-api-v1.2.http  ac-api-v1.3.http  http-client.env.json
http-clients/action-creator/v1_1_1_models/: cya-clip.json  ndvi.json
http-clients/action-creator/v1_1_models/: lulc-change.json  ndvi-clip.json  ndvi.json  water-quality.json
http-clients/action-creator/v1_2_models/: cya-clip.json  err-area-too-big.json  err-cycle.json  err-disjoined-subgraph.json  err-ds-not-supported.json  err-invalid-date-range.json  err-invalid-task-order.json  err-self-loop.json  err-too-many-tasks.json  err-wf-id-collision.json  err-wf-output-not-mapped.json  lulc-change-corine.json  lulc-change-glc.json  lulc-change.json  ndvi-clip-reproject.json  ndvi-clip.json  ndvi.json  s2-ard-wqc.json  scatter-lcc-corine.json  scatter-lcc-global.json  scatter-ndvi.json  scatter-water-quality.json  water-quality.json  wqc.json
http-clients/action-creator/v1_3_models/: err-invalid-input-ref-path.json  ndvi-full-temporal-s2-ard.json  s2-ard-doc-clip-reproject.json  s2-ard-ndvi-clip-reproject.json  s2-ard-wqc-adv.json  s2-ard-wqc.json  scatter-lulc-change-corine.json  scatter-s2-ard-ndvi-clip-reproject.json  scatter-s2-ard-wqc-adv.json  stac-search-next-page.json  stac-search.json  wqc.json
http-clients/ades/: ades.http  http-client.env.json  lulc.http  raster-calc.http  scatter.http  water-quality.http
http-clients/eodh-stac-api/: eodh-stac-api.http  http-client.env.json
http-clients/eodh-stac-api-requests/: eodh-stac-api.http
http-clients/eodh-workspaces/: eodh-workspaces-client.http  http-client.env.json  set_creds.py
src/api/assets/: clip-b64.txt  lulc-change-b64.txt  raster-calculate-b64.txt  water-quality-b64.txt  wf-step-compatibility-matrix.csv  wf-task-compatibility-matrix.csv
src/api/auth/: routes.py  schemas.py
src/api/health/: routes.py
src/api/v1_0/action_creator/: routes.py  schemas.py
src/api/v1_0/auth/: routes.py  schemas.py
src/api/v1_0/routes/: action_creator.py  ades.py  auth.py  health.py
src/api/v1_0/schemas/: __init__.py  action_creator.py  ades.py  auth.py  functions.py
src/api/v1_1/action_creator/: presets.py  routes.py  schemas.py  ws.py
src/api/v1_1/action_creator/schemas/: functions.py  history.py  presets.py  workflow_steps.py  workflows.py
src/api/v1_1_1/action_creator/: functions.py  presets.py  routes.py  schemas.py  ws.py
src/api/v1_2/action_creator/: functions.py  presets.py  routes.py  schemas.py  ws.py
src/api/v1_2/action_creator/schemas/: errors.py  functions.py  history.py  presets.py  workflow_steps.py  workflow_tasks.py  workflows.py
src/api/v1_2/visualization/: routes.py  schemas.py
src/api/v1_2/visualization/schemas/: request.py  response.py
src/api/v1_3/action_creator/: routes.py
src/api/v1_3/action_creator/schemas/: errors.py  history.py  presets.py  workflow_tasks.py  workflows.py
src/api/v1_3/catalogue/: routes.py
src/api/v1_3/catalogue/schemas/: stac_search.py  visualization.py
src/api/v1_3/datasets/: routes.py
src/api/v1_3/visualization/: routes.py
src/consts/: __init__.py  action_creator.py  aoi.py  directories.py  functions.py  geometries.py  presets.py
src/core/: settings.py
src/core/configs/: argument_parsing.py
src/routes/: action_creator.py  security.py
src/schemas/: action_creator.py
src/services/: action_creator_repo.py  ades.py  db.py  validation_utils.py
src/services/ades/: base_client.py  client.py  factory.py  fake_client.py  schemas.py  token_client.py
src/services/charts/: data_builder.py
src/services/cwl/: app.cwl  workflow_creator.py
src/services/cwl/function_registry/: clip.yaml  defra-calibrate.yaml  ds-query.yaml  multi-stac-join.yaml  reproject.yaml  s1-ds-query.yaml  s2-ds-query.yaml  spectral-index.yaml  stac-join.yaml  summarize-class-statistics.yaml  thumbnail.yaml  water-quality.yaml
src/services/db/: __init__.py  action_creator_repo.py  base.py
src/services/stac/: client.py  schemas.py
src/utils/: geo.py  logging.py  names.py
tests/: conftest.py
tests/api/auth/: test_auth.py
tests/api/v1_0/action_creator/: conftest.py
tests/api/v1_0/action_creator/routes/: conftest.py  test_functions.py  test_get_job_submission.py  test_post_job_submission.py  test_websockets_job_submission.py
tests/api/v1_0/action_creator/schemas/: test_function_inputs.py  test_functions.py
tests/api/v1_0/auth/: test_auth.py  test_security.py
tests/api/v1_1/: conftest.py
tests/api/v1_1/action_creator/routes/: test_websockets_job_submission.py  test_wf_history_endpoint.py
tests/api/v1_1/action_creator/schemas/: test_presets.py
tests/api/v1_1_1/: conftest.py
tests/api/v1_1_1/action_creator/routes/: test_job_submission_endpoint.py  test_websockets_job_submission.py  test_wf_history_endpoint.py
tests/api/v1_2/: conftest.py  test_security.py
tests/api/v1_3/: conftest.py  test_security.py
tests/api/v1_3/catalogue/: conftest.py
tests/data/: test-app-package.cwl
tests/e2e/api/v1_0/: conftest.py  test_action_creator.py  test_auth.py  test_functions.py  test_get_job_submission.py  test_post_job_submission.py  test_websockets_job_submission.py
tests/e2e/services/: test_ades.py
tests/fakes/: ades.py  ws_token_client.py
tests/integration/api/v1_0/: test_security.py
tests/integration/services/ades/: test_client.py  test_token_client.py
tests/unit/services/: test_ades_service.py  test_validation_utils.py
tests/unit/services/cwl/: test_wf_creator.py
tests/unit/utils/: test_geo_utils.py  test_logging.py  test_name_utils.py
(+77 files in other folders)
